# EvaluateSegmentation

./: README.md
EvaluationSegmentation_linux/EvaluateSegmentation/: EvaluateSegmentation.py
EvaluationSegmentation_win/: CMakeLists.txt
EvaluationSegmentation_win/EvaluateSegmentation/: CMakeLists.txt  EvaluateSegmentation.py
EvaluationSegmentation_win/EvaluateSegmentation/Resources/UI/: EvaluateSegmentation.ui
